--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,6 @@
         <activity
             android:name=".ui.intro.splash.SplashActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Bloom">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +28,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.main.MainActivity" />
+        <activity android:name=".ui.main.MainActivity"/>
+
+        <activity android:name=".ui.auth.AuthActivity"/>
+
 
     </application>
 
