--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ coreSplashscreen = "1.0.1"
 decompose = "3.1.0"
 foundation = "1.7.3"
 koin = "3.4.0"
+material3 = "1.3.0"
 ksp = "1.9.21-1.0.16"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
@@ -59,6 +60,10 @@ koin-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = 
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottieCompose" }
 
+androidx-material3-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
+androidx-material3-windowsize = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3" }
+androidx-material3-adaptive-navigation = { module = "androidx.compose.material3:material3-adaptive-navigation-suite", version.ref = "material3" }
+
 mvikotlin = { module = "com.arkivanov.mvikotlin:mvikotlin", version.ref = "mvikotlin" }
 mvikotlin-extensions-coroutines = { module = "com.arkivanov.mvikotlin:mvikotlin-extensions-coroutines", version.ref = "mvikotlinExtensionsCoroutines" }
 mvikotlin-rx = { module = "com.arkivanov.mvikotlin:rx", version.ref = "mvikotlin"}
@@ -87,3 +92,8 @@ koin = [
     "koin-compose"
 ]
 
+material = [
+    "androidx-material3-material3",
+    "androidx-material3-adaptive-navigation",
+    "androidx-material3-windowsize"
+]
