--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,8 @@ coreSplashscreen = "1.0.1"
 decompose = "3.1.0"
 foundation = "1.7.3"
 koin = "3.4.0"
+ktorClientCore = "2.3.7"
+okhttp = "5.0.0-alpha.10"
 material3 = "1.3.0"
 ksp = "1.9.21-1.0.16"
 kotlin = "1.9.0"
@@ -57,7 +59,13 @@ koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 
-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktorClientCore" }
+
+ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktorClientCore" }
+
+okhttp-main = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottieCompose" }
 
 androidx-material3-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
