--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 accompanistPager = "0.28.0"
 agp = "8.5.0"
+ccp = "2.7.0"
 coilCompose = "2.4.0"
 coreSplashscreen = "1.0.1"
 decompose = "3.1.0"
@@ -31,6 +32,7 @@ uiTooling = "1.7.2"
 runtimeLivedata = "1.7.2"
 
 [libraries]
+ccp = { module = "com.hbb20:ccp", version.ref = "ccp" }
 decompose-core = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
 decompose-extensions-compose = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
 accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanistPager" }
