Добавил профиль активити, отверстал профиль мэйн, добавил все категории

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
 
         <activity android:name=".ui.auth.AuthActivity"/>
 
+        <activity android:name=".ui.profile.ProfileActivity"/>
+
+        <activity android:name=".ui.subscription.SubscriptionActivity"/>
+
 
     </application>
 
