--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ accompanistPager = "0.28.0"
 agp = "8.5.0"
 ccp = "2.7.0"
 coilCompose = "2.4.0"
+composecalendar = "1.3.0"
 coreSplashscreen = "1.0.1"
 decompose = "3.1.0"
 foundation = "1.7.3"
@@ -34,6 +35,7 @@ runtimeLivedata = "1.7.2"
 
 [libraries]
 ccp = { module = "com.hbb20:ccp", version.ref = "ccp" }
+composecalendar = { module = "io.github.boguszpawlowski.composecalendar:composecalendar", version.ref = "composecalendar" }
 decompose-core = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
 decompose-extensions-compose = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
 accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanistPager" }
